modulo-04-gestion-apps-redes/ejercicios/ejercicio-01/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=frontend"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
        - name: toolbox
          image: busybox:1.36
          command: ["sh", "-c", "sleep 3600"]
